# vectorman

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  vman
tests/: __init__.py  test.pbf  test.pbf.txt  test_mvt.py  test_util.py
vectorman/: constants.py  models.py  mvt.py  util.py
vectorman/pbf/: vector_tile_pb2.py
